# basketball_model

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py
src/betting/: __init__.py  ev_calculator.py  kelly.py
src/config/: __init__.py  constants.py  settings.py
src/db/: __init__.py  models.py  session.py
src/models/: __init__.py  base.py
src/models/statistical/: __init__.py  negative_binomial.py
src/odds/: __init__.py  devig.py  odds_api.py
